# Hiteam

./: .env  README.md  alembic.ini  check_env.py  gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 0cf65cf26c1d_создание_ключевых_моделей.py  2560f02d5ac9_обновление_модели_user.py  d0184d87153a_initial_migration.py
app/: main.py
app/auth/: auth.py  schemas.py  utils.py
app/config/: config.py
app/db/: database.py
app/models/: models.py
frontend/: index.html  profile.html
