[tool.poetry]
name = "discord-clone-v2"
version = "0.1.0"
description = ""
authors = ["redcat300"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
websockets = "^13.1"
pyjwt = "^2.9.0"
passlib = "^1.7.4"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
